# sunmsg

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-production.txt  requirements.txt  run_maintenance.py  run_scheduler.py
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  config.py  database.py  db_backend.py  extensions.py  forms.py
deploy/: env.mediasoup.example
docs/: cicd-github-actions.md  ios-app-development-plan.md  postgresql-migration-plan.md  production-deployment.md  release-checklist-v1.md  runtime-modes.md  security-architecture.md  svg-icon-system.md
scripts/: audit_dom_ids.py  check_text_encoding.py  manual_smoke_group_ui.py  prepare_test_database.py  sql_profile_report.py
server-mediasoup/: config.js  package-lock.json  package.json  room-manager.js  server.js
static/: bootstrap.js  calls.css  chat-appearance.js  chat-runtime.js  chat.js  crypto-v2.js  crypto.js  double-ratchet.js  emojis.json  i18n-runtime.js  i18n.js  interface-theme.js  manifest.json  mls-client.js  mnemonic.js  motion.css  offline.html  qrcode-loader.js  robots.txt  service-worker.js  style-base-layer.css  style.css
templates/: _client_preferences_early_boot.html  _legacy_cache_cleanup_early.html  _pwa_head.html  _social_meta.html  chat.html  error.html  index.html  moderation_appeals_console.html  moderation_console.html  moderation_support_console.html  onboarding_guide.html  (+5 more)
(+745 files in other folders)
