[project]
name = "sunmessenger"
version = "0.1.0"
description = "Self-hosted real-time messenger with client-side encrypted messaging, voice/video calls, and moderation tooling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:asyncio -p no:anyio"
